# axum_tickets

./: Cargo.toml
src/: ctx.rs  error.rs  log.rs  main.rs
src/model/: mod.rs  model_controller.rs  tickets.rs
src/web/: mod.rs  mw_auth.rs  routes_auth.rs  routes_tickets.rs
