[package]
name = "axum_tickets"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
# Serde / json
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_with = "3.3.0"
# Axum
axum = { version= "0.6.20", features = ["macros"] }
tower-http = { version = "0.4.4", features = ["fs"] }
tower-cookies = { version = "0.9.0", features = ["axum-core", "private"] }
# Others
chrono = "0.4.24"
lazy-regex = "3.0.2"
async-trait = "0.1.73"
strum_macros = "0.25.2"
uuid = {version = "1.4.1", features = ["v4","fast-rng",]}